# fidgetsense-neural

./: .gitignore  X_and_y.pkl  collect_and_predict.py  do_all_at_once.py  get_sample_and_save.py  model.py  process_samples.py  pyproject.toml  read_and_save_to_pkl.py  record.py  sample.py  samples.pkl  utils.py
data/1/: chars.txt  labels.csv  readings.csv
data/10/: labels.csv  readings.csv
data/11/: chars.txt  labels.csv  readings.csv
data/12/: labels.csv  readings.csv
data/13/: chars.txt  labels.csv  readings.csv
data/14/: chars.txt  labels.csv  readings.csv
data/17/: chars.txt  labels.csv  readings.csv
data/19/: chars.txt  labels.csv  readings.csv
data/2/: chars.txt  labels.csv  readings.csv
data/20/: labels.csv  readings.csv
data/3/: chars.txt  labels.csv  readings.csv
data/4/: chars.txt  labels.csv  readings.csv
data/8/: labels.csv  readings.csv
data/9/: chars.txt  labels.csv  readings.csv
