[project]
name = "fidgetsense-neural"
version = "0.1.0"
description = ""
authors = [
    {name = "ton1c",email = "sembl1@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib (>=1.5.2,<2.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
